# jobs_for_sweetie_pie

./: .env  .env.test  .gitignore  .pre-commit-config.yaml  bot.Dockerfile  celery.Dockerfile  docker-compose.yml  main.py  pyproject.toml  worker-entrypoint.sh
.github/: dependabot.yml
core/: celery_app.py  loader.py  tasks.py
core/db_api/: areas.py  connection.py  init_db.py  vacancies.py
data/: config.py
filters/: __init__.py
handlers/channels/: hh_vacancies_parser.py  message.py
handlers/errors/: errors_handler.py
handlers/users/: help.py  start.py
middlewares/: __init__.py  middlewares.py
models/: __init__.py  area.py  vacancy.py
settings/: celery_config.py  config.py
utils/: hh.py  notify_admins.py
utils/db_api/: areas.py  connection.py  init_db.py  misc.py  vacancies.py
