[tool.poetry]
name = "jobs_for_sweetie_pie"
version = "0.1.0"
description = "This guy works for searching jobs on hh platform"
authors = ["Mikhail Chigrin <chmv@liis.su>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8.5"
aiogram = "^2.11.2"
requests = "^2.25.1"
python-dotenv = "^0.19.0"
loguru = "^0.5.3"
bs4 = "^0.0.1"
lxml = "^4.6.2"
celery = "^5.0.5"
aiomysql = "^0.0.21"
pydantic = "^1.8.1"
black = "^22.6.0"
flake8 = "^4.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
